[issue-840] Fork java -jar jenkins.war from hpi:run